dnl Process this file with autoconf to produce a configure script.
AC_INIT(Plate.h)
AC_CONFIG_AUX_DIR(`pwd`/config)

dnl Checks for programs.
AC_PROG_CC

AC_CANONICAL_HOST
dnl Enable to set for debugging options
AC_ARG_ENABLE(debug,
[  --enable-debug        Generate debugging information during compilation.],
enable_debug=yes,enable_debug=no)

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_SUBST(enable_debug)
AC_OUTPUT(Makefile)
